# vesuvius-automesh

./: .gitignore  LICENSE  README.md  TECHNICAL_NOTES.md  WRITEUP.md  pyproject.toml
config/: level_ledger.json
figures/: make_phantom_halo_figure.py
qc/: README.md  overlap_distance_stats.json  windows_qc_all157.jsonl
survey/: cube_maps.npz  existing_cubes.npy  preds_survey.json
tracer/: params_seed_v3.json
vesuvius_automesh/: __init__.py  batch_region.py  build_supported_preds.py  build_supported_preds_coarse.py  config.py  export_cubes.py  flatten.py  flatten_worker.py  mesh_io.py  render_driver.py  render_queue.py  render_tifxyz.py  scroll2_seeds.py  select_regions.py  tracer_sweep.py
vesuvius_automesh/_vendor/first_letters/: __init__.py  cross_volume.py  mesh_render.py  qc.py  recenter.py  render.py  sheet.py  zarrio.py
